[gd_scene load_steps=3 format=3 uid="uid://dksakehgk051q"]

[ext_resource type="Script" path="res://Scripts/menus/inv_ui_slot.gd" id="1_1ycl4"]
[ext_resource type="LabelSettings" uid="uid://4q4ec65ooiba" path="res://menu_font.tres" id="2_a3oxl"]

[node name="inv_ui_slot" type="Panel"]
custom_minimum_size = Vector2(200, 200)
offset_right = 200.0
offset_bottom = 200.0
script = ExtResource("1_1ycl4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.241156, 0.241156, 0.241156, 0.835294)

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="Item Sprite" type="Sprite2D" parent="CenterContainer/Panel"]

[node name="Item Count" type="Label" parent="CenterContainer/Panel"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = -88.0
offset_right = 84.0
offset_bottom = -65.0
label_settings = ExtResource("2_a3oxl")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
